@@ -3,6 +3,8 @@ import CreditCardIcon from './cards';
 import GiropayIcon from './giropay';
 import KlarnaIcon from './klarna';
 import AffirmIcon from './affirm';
+import AfterpayIcon from './afterpay';
+import ClearpayIcon from './clearpay';
 import MultibancoIcon from './multibanco';
 import SofortIcon from './sofort';
 import SepaIcon from './sepa';
@@ -19,6 +21,8 @@ export default {
 	giropay: GiropayIcon,
 	klarna: KlarnaIcon,
 	affirm: AffirmIcon,
+	afterpay: AfterpayIcon,
+	clearpay: ClearpayIcon,
 	multibanco: MultibancoIcon,
 	sepa_debit: SepaIcon,
 	sofort: SofortIcon,
