@@ -11,6 +11,7 @@ export const PAYMENT_METHOD_NAME_BANCONTACT = 'stripe_bancontact';
 export const PAYMENT_METHOD_NAME_ALIPAY = 'stripe_alipay';
 export const PAYMENT_METHOD_NAME_KLARNA = 'stripe_klarna';
 export const PAYMENT_METHOD_NAME_AFFIRM = 'stripe_affirm';
+export const PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY = 'stripe_afterpay_clearpay';
 
 export function getPaymentMethodsConstants() {
 	return {
@@ -27,6 +28,7 @@ export function getPaymentMethodsConstants() {
 		alipay: PAYMENT_METHOD_NAME_ALIPAY,
 		klarna: PAYMENT_METHOD_NAME_KLARNA,
 		affirm: PAYMENT_METHOD_NAME_AFFIRM,
+		afterpay_clearpay: PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY,
 	};
 }
 
