@@ -149,6 +149,7 @@ class WC_Stripe_Settings_Controller {
 			'show_customization_notice' => get_option( 'wc_stripe_show_customization_notice', 'yes' ) === 'yes' ? true : false,
 			'is_test_mode'              => $this->gateway->is_in_test_mode(),
 			'plugin_version'            => WC_STRIPE_VERSION,
+			'account_country'           => $this->account->get_account_country(),
 		];
 		wp_localize_script(
 			'woocommerce_stripe_admin',
