@@ -610,17 +610,21 @@ abstract class WC_Stripe_UPE_Payment_Method extends WC_Payment_Gateway {
 		$account_country     = WC_Stripe::get_instance()->account->get_account_country();
 		$range               = null;
 		$limits_per_currency = $this->get_limits_per_currency();
+
 		if ( isset( $limits_per_currency[ $current_store_currency ][ $account_country ] ) ) {
 			$range = $limits_per_currency[ $current_store_currency ][ $account_country ];
 		} elseif ( isset( $limits_per_currency[ $current_store_currency ]['default'] ) ) {
 			$range = $limits_per_currency[ $current_store_currency ]['default'];
 		}
+
 		// If there is no range specified for the currency-country pair we don't support it and return false.
 		if ( null === $range ) {
 			return false;
 		}
+
 		$is_valid_minimum = null === $range['min'] || $amount >= $range['min'];
 		$is_valid_maximum = null === $range['max'] || $amount <= $range['max'];
+
 		return $is_valid_minimum && $is_valid_maximum;
 	}
 
